fix: hide card overflow during flip transition
The overflow happens because the height of the back side of the card
changes to 0 when the card is blurred

--- a/src/scss/__PlayArea.scss
+++ b/src/scss/__PlayArea.scss
@@ -44,6 +44,7 @@
 .flippable-card__back {
   transform: rotateY(180deg);
   height: 0;
+  overflow: hidden;
 }
 
 .play-buttons > button {
